--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-bigint": "^0.2.0",
     "node-geocoder": "3.20.0",
     "request": "^2.73.0",
+    "url": "0.11.0",
     "uuid": "^3.0.1"
   },
   "repository": {
