--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-geocoder": "3.20.0",
     "request": "^2.73.0",
     "url": "0.11.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "xml2js": "0.4.19"
   },
   "repository": {
     "type": "git",
